<resources>
    <string name="app_name">GUIDE</string>

    <string name="action_settings">Settings</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirmpassword">Confirm Password</string>
    <string name="hint_mobile">Mobile No</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="action_favorite">Test</string>
    <string name="logout">Logout</string>
    <string name="credits">Credits</string>
    <string name="profile">Profile</string>
    <string name="search">search</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="my_course">My Course</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="app_guide_register">GUIDE REGISTER</string>
    <string name="app_guide_login">GUIDE LOGIN</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="unsus"><b><u>Unsubscribe</u></b></string>


    <!-- Button text -->
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="loading">Loading</string>

</resources>
