<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/search"
        android:title="@string/search"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/person"
        android:title="@string/profile"
        app:showAsAction="ifRoom"/>

    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_credits"
        android:title="@string/credits"
        app:showAsAction="never"/>
    <item android:id="@+id/action_logout"
        android:title="@string/logout"
        app:showAsAction="never"/>

</menu>